fix: issue with modal cut off at the bottom when there is too much contents

--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   z-index: 1;
 }
@@ -15,6 +15,7 @@
   width: 90%;
   height: 80%;
   max-width: 800px;
+  max-height: 105dvh;
   padding: 30px;
   background-color: #8ececc;
   border-radius: 10px;
